# medscope_server

./: .gitignore  Procfile  README.md  clr-txform.py  frontend.py  pyproject.toml  render.yaml  requirements.txt
core/: settings.py  urls.py
imaging/: apps.py  ml_model.py  models.py  pdf_utils.py  serializers.py  urls.py  views.py
imaging/experimental/ml/: base.py
imaging/experimental/ml/dermato/: __init__.py  evaluation.py  model.py  training.py
imaging/experimental/pipeline/: base_processor.py  dermato_pipeline.py
imaging/migrations/: 0001_initial.py
imaging/ml/: base.py
imaging/ml/dermato/: __init__.py  evaluation.py  model.py  training.py
imaging/pipeline/: base_processor.py  dermato_pipeline.py
imaging/saved_models/: DermatoModel_latest.pkl
imaging/utils/: colour_utils.py  inference_utils.py  pdf_utils.py
imaging/views/: __init__.py  base.py  dermatoscopy.py  otoscopy.py  pharyngoscopy.py
